Dodanie Open in Colab badge

--- a/Pandas - elementarne wprowadzenie/Pandas - elementarne wprowadzenie - zadania.ipynb
+++ b/Pandas - elementarne wprowadzenie/Pandas - elementarne wprowadzenie - zadania.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "touched-flush",
+   "id": "enclosed-drove",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "flush-nudist",
    "metadata": {},
    "source": [
     "# Pandas - elementarne wprowadzenie - zadania do samodzielnego wykonania"
@@ -10,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "talented-sarah",
+   "id": "thrown-conjunction",
    "metadata": {},
    "source": [
     "Pobranie danych do analizy (informacje o zestawach klocków Lego) ze strony [rebrickable.com](https://rebrickable.com/downloads/) (plik sets.csv.gz). \n",
@@ -21,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exterior-construction",
+   "id": "minute-nothing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conservative-thirty",
+   "id": "reasonable-pleasure",
    "metadata": {},
    "source": [
     "## Zadanie 1"
@@ -46,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interested-wichita",
+   "id": "underlying-intensity",
    "metadata": {},
    "source": [
     "Wczytaj dane z pobranego wcześniej pliku **sets.csv** do DataFrame **df** tak, aby wartości kolumny **set_num** stanowiły indeks"
@@ -55,14 +63,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smaller-commonwealth",
+   "id": "strong-reliance",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "treated-analyst",
+   "id": "offshore-directory",
    "metadata": {},
    "source": [
     "Sprawdź rozmiar danych w DataFrame"
@@ -71,14 +79,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "frequent-desperate",
+   "id": "dimensional-cooling",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "becoming-focus",
+   "id": "royal-ultimate",
    "metadata": {},
    "source": [
     "Wyświetl kilka pierwszych wierszy DataFrame"
@@ -87,14 +95,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "enclosed-shaft",
+   "id": "portuguese-investing",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "eight-washer",
+   "id": "danish-division",
    "metadata": {},
    "source": [
     "Wyświetl kilka ostatnich wierszy DataFrame"
@@ -103,14 +111,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "phantom-offer",
+   "id": "regular-reconstruction",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fifteen-province",
+   "id": "digital-blend",
    "metadata": {},
    "source": [
     "## Zadanie 2"
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "purple-california",
+   "id": "pending-mountain",
    "metadata": {},
    "source": [
     "Wyświetl wykres prezentujący dane z DataFrame **df** tak aby każda kolumna była pokazana na osobnym wykresie"
@@ -127,14 +135,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confused-colonial",
+   "id": "acceptable-immune",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "particular-honolulu",
+   "id": "assured-floating",
    "metadata": {},
    "source": [
     "## Zadanie 3"
@@ -142,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comprehensive-rubber",
+   "id": "portuguese-retrieval",
    "metadata": {},
    "source": [
     "Wyświetl 4 wiersz DataFrame **df**"
@@ -151,14 +159,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "meaningful-assault",
+   "id": "dominican-david",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "false-underground",
+   "id": "extreme-storm",
    "metadata": {},
    "source": [
     "## Zadanie 4"
@@ -166,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vital-ferry",
+   "id": "adverse-market",
    "metadata": {},
    "source": [
     "Wylicz ile różnych zestawów klocków było produktowanych w poszczególnych latach"
@@ -175,14 +183,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "racial-scanner",
+   "id": "attended-primary",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "breeding-herald",
+   "id": "spatial-amino",
    "metadata": {},
    "source": [
     "Wyświetl wykres prezentujący zmiany liczby zestawów klocków produktowanych w poszczególnych latach"
@@ -191,14 +199,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "horizontal-sponsorship",
+   "id": "agricultural-emphasis",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "reserved-honduras",
+   "id": "ideal-spoke",
    "metadata": {},
    "source": [
     "## Zadanie 5"
@@ -206,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sudden-filing",
+   "id": "interesting-empire",
    "metadata": {},
    "source": [
     "Teraz kolej na Ciebie, jaką operację chciałbyś wykonać za pomocą Pandas na dostępnych danych? Pobaw się po prostu tym czego się nauczyłeś z artykułu na blogu. Nie obawiaj się ekepreymentować. Jak ci coś nie zadziała to też czegoś się nauczysz. Powodzenia :-) "
@@ -215,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "increasing-potential",
+   "id": "surrounded-launch",
    "metadata": {},
    "outputs": [],
    "source": []
