Korekta nazw dla postu 2

--- a/Jak-w-Pandas-utworzyć-DataFrame-na-podstawie-danych-w-liście/Jak-w-Pandas-utworzyć-DataFrame-na-podstawie-danych-w-liście.ipynb
+++ b/Jak-w-Pandas-utworzyć-DataFrame-na-podstawie-danych-w-liście/Jak-w-Pandas-utworzyć-DataFrame-na-podstawie-danych-w-liście.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "monthly-object",
+   "id": "funny-irrigation",
    "metadata": {},
    "source": [
-    "# Zadania do postu Jak stworzyć własny dataset z wykorzystaniem Pandas "
+    "# Zadania do postu Jak w Pandas utworzyć DataFrame na podstawie danych w liście"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "supported-evidence",
+   "id": "insured-orleans",
    "metadata": {},
    "source": [
     "## Zadanie 1"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cognitive-thailand",
+   "id": "declared-marina",
    "metadata": {},
    "source": [
     "Wczytaj bibliotekę Pandas"
@@ -27,14 +27,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "independent-calculation",
+   "id": "wireless-anger",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "negative-girlfriend",
+   "id": "vietnamese-polymer",
    "metadata": {},
    "source": [
     "## Zadanie 2"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "annoying-lease",
+   "id": "selected-termination",
    "metadata": {},
    "source": [
     "Zdefiniuj własną listę tak, aby zawierała kilka wierszy danych. Możesz wykorzystać do tego listę, tuple lub Dictionary. Przypisz listę do zmiennej **dane**."
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "elegant-transition",
+   "id": "illegal-handbook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "homeless-object",
+   "id": "diagnostic-mixer",
    "metadata": {},
    "source": [
     "## Zadanie 3"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "generous-pickup",
+   "id": "disciplinary-capital",
    "metadata": {},
    "source": [
     "Utwórz DataFrame na podstawie danych zapisanych w zmiennej **dane**"
@@ -77,14 +77,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "double-candy",
+   "id": "revolutionary-assist",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "nervous-might",
+   "id": "immune-arthur",
    "metadata": {},
    "source": [
     "## Zadanie 4"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "democratic-explosion",
+   "id": "trying-cheat",
    "metadata": {},
    "source": [
     "Zapisz dane z DataFrame do arkusza Excela"
@@ -101,14 +101,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "decreased-warehouse",
+   "id": "competitive-export",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "elegant-hygiene",
+   "id": "portable-protein",
    "metadata": {},
    "source": [
     "## Zadanie 5"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "virtual-prime",
+   "id": "modular-wesley",
    "metadata": {},
    "source": [
     "Zapisz dane z DataFrame do pliku JSON"
@@ -125,14 +125,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thirty-victor",
+   "id": "african-summit",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ongoing-construction",
+   "id": "weighted-television",
    "metadata": {},
    "source": [
     "# Uwaga"
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accomplished-sector",
+   "id": "latin-angle",
    "metadata": {},
    "source": [
     "Jak masz ochotę wykonaj powyższe zadania z wykorzystaniem kolejnych struktur tak, abyś przećwiczył wszystkie struktury z artykułu. Nauka programowania to przede wszystkich praktyka, praktyka, praktyka."
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "several-reader",
+   "id": "boolean-amino",
    "metadata": {},
    "outputs": [],
    "source": []
